# bevy-snek

./: Cargo.toml  README.md
.cargo/: config.toml
src/: arena.rs  cli.rs  components.rs  debug_text.rs  events.rs  food.rs  game.rs  main.rs  resources.rs  snake.rs
